2002-02-05  Per Bothner  <per@bothner.com>

	* configure.in: Add links to two more xml data-sets for xml tests.

2002-01-31  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  No longer define
	response-header - the programmer must first (require 'http) now.

2002-01-29  Per Bothner  <per@bothner.com>

	* read.java:  Since apply1 can now throw Throwable, don't need to
	wrap exception.  However, so call SyntaxException's new setHeader.
	Don't call ScmRead's statuc readObject, which creates a new ScmRead.

	* configure.in:  Also make link to gnu/xquery/testsuite/bib.xml.in.

	* gnu/brl:  New package - code imported from BRL.
	* configure.in (AC_OUTPUT):  Also generate gnu/brl/Makefile.

	* kawa/repl.java (getInterpreterFromFilenameExtension):  New static.
	(processArgs, main):  Use filename extension to select language.

	* kawa/standard/reequire:  Handle (require 'http).

	* kawa/standard/reequire (scanForDefinitions):  Coerce find call
	to void if we're not actually using it (to prevent it being
	printed when we're compiling with implicit values-append).

2002-01-23  Per Bothner  <per@bothner.com>

	* build.xml:  Add enable-xml flag, to build xml-related classes.
	* build.properties:  Add/document enable-xml.

	* configure.in (AC_OUTPUT):  Also make gnu/kawa/brl/Makefile.

	* kawa/Shell.java (run):  Call Lexer's setInteractive if TtyInPort.

	* kawa/standard/Scheme.java (initScheme):  Define values-append.
	Fix definition of unescaped-data.

	* kawa/lang/Translator.java (makeBody):  New method.
	(rewrite_body, finishModule):  Use makeBody.

2002-01-21  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java:  Also define 'unescaped-data'.

	* acinclude.m4:  New check-in.

2002-01-19  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java (apply2):  Don't catch and re-throw.

2002-01-13  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Define response-header.