@@ -76,7 +76,7 @@ APPLETVIEWER = appletviewer
 
 # Not done by "make check" as it is interactive.
 check-scribble: scribble.class
-	$(APPLETVIEWER) -J-cp -J. -J-cp -J.. file:$(srcdir)/scribble.html
+	$(APPLETVIEWER) -J-cp -J. -J-cp -J.. scribble.html
 
 SOURCES = testing.scm test.scm num-test.scm mac-test.scm mac1.scm \
   classes1.scm classes2.scm SimpleB.java obj-test.scm \
