@@ -14,7 +14,7 @@ Sorry, Java is needed.
     <address><a href="mailto:per@bothner.com">Per Bothner</a></address>
 <!-- Created: Fri Feb  4 15:49:36 PST 2000 -->
 <!-- hhmts start -->
-Last modified: Sat Feb 12 21:30:16 PST 2000
+Last modified: Mon Feb 11 14:53:01 PST 2002
 <!-- hhmts end -->
   </body>
 </html>
